--- a/get-users/src/app/users/users.component.html
+++ b/get-users/src/app/users/users.component.html
@@ -1,3 +1,3 @@
-<ul class="list-group" *ngFor="let users of users">
-  <li class="list-group-item">{{users}}</li>
+<ul class="list-group" *ngFor="let user of users; let i = index">
+  <li class="list-group-item">{{user.id}}</li>
 </ul>
